# retro-game-indexer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.toml  pyproject.toml
data/datasets/games/: aliases.json  consoles.json  hints.json  known_titles.json  stopwords.json
datasets/reference/games/: known_titles.json  stopwords.json
datasets/reference/maintenance/: hints.json  known_terms.json  stopwords.json
docs/: ai.md  calibration.md  roadmap.md  usage.md
src/retro_game_indexer/: __init__.py  __main__.py  cli.py
src/retro_game_indexer/pipelines/: base.py
src/retro_game_indexer/pipelines/games/: detector.py  filters.py  hints.py  validator.py
src/retro_game_indexer/pipelines/maintenance/: detector.py  filters.py  hints.py  validator.py
src/retro_game_indexer/shared/: audio.py  cache.py  channel.py  config.py  datalake.py  datasets.py  db.py  transcriber.py
vector/: README.md
