[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-game-indexer"
version = "0.2.0"
description = "Detect and index retro gaming content from YouTube videos"
requires-python = ">= 3.12"
dependencies = [
    "typer >= 0.9",
    "yt-dlp >= 2024.0",
    "faster-whisper >= 1.0",
    "gliner >= 0.2",
    "python-dotenv >= 1.0",
]

[project.scripts]
retro-game-indexer = "retro_game_indexer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
